WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91220
[GTK] WebKit2 crash when going back/forward
https://bugs.webkit.org/show_bug.cgi?id=91220
Summary
[GTK] WebKit2 crash when going back/forward
Carlos Garcia Campos
Reported
2012-07-13 04:32:29 PDT
I assumed that when load-committed signal is emitted for the main frame, the signals for the main resource had already been fired. That's indeed what happens when the page is normally loaded, but when the page is loaded from the backforward list, we don't even have a main resource when the loadcommitted signal is emitted.
Attachments
Patch
(2.41 KB, patch)
2012-07-13 04:41 PDT
,
Carlos Garcia Campos
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-07-13 04:41:11 PDT
Created
attachment 152219
[details]
Patch Patch to fix the crash, I'll file a new bug for the callbacks emisson order issue.
WebKit Review Bot
Comment 2
2012-07-13 04:44:03 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Xan Lopez
Comment 3
2012-07-13 05:00:36 PDT
Comment on
attachment 152219
[details]
Patch OK.
Carlos Garcia Campos
Comment 4
2012-07-13 05:08:19 PDT
Committed
r122567
: <
http://trac.webkit.org/changeset/122567
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug